--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -17,13 +17,13 @@
         <div class="sec">
            <div id="myLinks">
                 <div><a href="index.html">HOME</a></div>
-                <div> <a href="service.html">SERVICES</a></div>
-                <div><a href="#" class="book">BOOK AN APPOINMENT</a></div>
-                <div><a href="#" class="login">Login/Signup</a></div> 
+                <div> <a href="./Views/service.html">SERVICES</a></div>
+                <div><a href="#" class="book" id="book">BOOK AN APPOINMENT</a></div>
+                <div><a href="#" class="login" id="login">Login/Signup</a></div> 
         </div>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-          </a>
+    <i class="fa fa-bars"></i>
+  </a>
         </div>
     </div>
     <!-- ------------------------------NAVBAR END-------------------- -->
