--- a/Frontend/Signup.html
+++ b/Frontend/Signup.html
@@ -30,7 +30,7 @@
         <div class="contact">
           <form >
             <h3>SIGN UP</h3>
-            <input id="name"   type="text" placeholder="FistrtName">
+            <input id="fname"   type="text" placeholder="FistrtName">
             <input id="lname"   type="text" placeholder="LastName">
             <input id="email"  type="email" placeholder="E-mail">  
             <input id="pass"   type="password" placeholder="Password">
