--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -45,8 +45,8 @@
                     <div>
                         <form id="login-form">
                             <h3>LOG IN</h3>
-                            <input id="lemail" type="email" placeholder="E-mail">
-                            <input id="lpass" type="password" placeholder="Password">
+                            <input id="lemail" type="email" placeholder="E-mail" required>
+                            <input id="lpass" type="password" placeholder="Password" required>
                             <input id="login" type="submit" value="Login">
                             
                             <!-- <button class="submit">Log In</button> -->
