--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -23,6 +23,7 @@
                 <div> <a href="./Views/service.html">SERVICES</a></div>
                 <div> <a href="./Views/view.html">VIEW APPOINMENT</a></div>
                 <div><a href="./Views/book.html" class="book" id="book">BOOK AN APPOINMENT</a></div>
+                <div><a href="./Views/admin.Dashboard.html" class="book" id="adminPanel">Admin Panel</a></div>
                 <div><a href="#" class="login" id="login" onclick="handleLoginBtn()">Login/Signup</a></div>
             </div>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
