--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,8 +7,9 @@
     <title>Salon safari</title>
     <link rel="stylesheet" href="./Styles/index.css">
     <link rel="stylesheet" href="./Styles/navbar.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -69,7 +70,7 @@
                 team of experienced beauticians offers all the beauty services you've been
                 waiting for.
             </p>
-            <a href="#" class="book">BOOK AN APPOINMENT</a>
+            <a href="./Views/book.html" class="book">BOOK AN APPOINMENT</a>
         </div>
         <div>
             <img src="./image/a.jpg" alt="">
@@ -236,7 +237,7 @@
 
     <div class="footer">
         <div>
-            <h2 style="color: rgba(0, 213, 255, 0.882); font-size: 40px;">StyleSync</h2>
+            <img width="73%" src="./image/logo1.png" alt="">
             <div>
                 <a href="#" class="fa fa-facebook"></a>
                 <a href="#" class="fa fa-twitter"></a>
